maxmemory-policy rule

--- a/redis.conf.j2
+++ b/redis.conf.j2
@@ -7,3 +7,5 @@ masterauth: {{ REDIS_PASSWORD}}
 replicaof: {{ hostvars[host]['ansible_host'] }} 6379
 {% endfor %}
 {% endif %}
+
+maxmemory-policy volatile-lru # Sampson config
